<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/widget_search_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/widget_search_background"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="12dp">

        <ImageView
            android:id="@+id/widget_search_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/search"
            android:src="@drawable/ic_search_m3"
            android:tint="@color/widget_on_surface" />

        <TextView
            android:id="@+id/widget_search_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:maxLines="1"
            android:text="@string/search_on_alas_browser"
            android:textColor="@color/widget_on_surface_variant"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/widget_mic_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/widget_m3_icon_button_bg"
            android:clickable="true"
            android:contentDescription="@string/voice_searcht"
            android:padding="8dp"
            android:src="@drawable/ic_mic_m3"
            android:tint="@color/widget_on_primary_container" />
            
        <ImageView
            android:id="@+id/widget_camera_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/widget_m3_icon_button_bg"
            android:clickable="true"
            android:contentDescription="Lens"
            android:padding="8dp"
            android:src="@drawable/ic_photo_camera_m3"
            android:tint="@color/widget_on_primary_container" />

    </LinearLayout>

</LinearLayout>
