<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp">

    <ImageView
        android:id="@+id/widget_bg"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/widget_m3_search_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="14dp"
        android:paddingEnd="6dp">

        <LinearLayout
            android:id="@+id/search_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/search_icon"
                android:src="@drawable/ic_search_m3" />

            <TextView
                android:id="@+id/search_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="sans-serif-medium"
                android:maxLines="1"
                android:text="@string/search_hint"
                android:textColor="@color/widget_on_surface_variant"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:background="@drawable/widget_actions_group_bg">

            <FrameLayout
                android:id="@+id/voice_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/voice_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:src="@drawable/widget_m3_icon_button_bg" />

                <ImageView
                    android:id="@+id/voice_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/voice_search"
                    android:padding="10dp"
                    android:src="@drawable/ic_mic_m3" />
            </FrameLayout>

            <FrameLayout
                android:id="@+id/camera_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:clickable="true"
                android:focusable="true">

                <ImageView
                    android:id="@+id/camera_bg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@null"
                    android:src="@drawable/widget_m3_icon_button_bg" />

                <ImageView
                    android:id="@+id/camera_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/camera_search"
                    android:padding="10dp"
                    android:src="@drawable/ic_photo_camera_m3" />
            </FrameLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
